--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body style="background-color: antiquewhite;">
     <h1>Odin Recipes</h1>
     <a href="recipes/lasagna.html">Lasagna Recipe</a> <br>
     <a href="recipes/chicken.html">Chicken Recipe</a> <br>
