--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasagna Recipe</title>
 </head>
-<body>
-    <h1>Lasagna</h1>
-    <img src="/assets/lasagna.jpg" alt="lasagna-picture">
-    <h4>This is a traditional dish in my family. Anyone can make it really. It is composed of traditional Mexican ingredients layered over the top of one another in a lasagna-like fashion (hence the name) but has little similarity to lasagna, so lasagna haters have no fear</h2>
+<body style="background-color: antiquewhite;">
+    <h1>Lasagna Recipe</h1>
+    <div class="center"> <img src="/assets/lasagna.jpg" class="picture" alt="lasagna-picture"> </div>
     
-    <h4>Ingredients</h4>
+    <h4 class="center">This is a traditional dish in my family. Anyone can make it really. It is composed of traditional Mexican ingredients layered over the top of one another in a lasagna-like fashion (hence the name) but has little similarity to lasagna, so lasagna haters have no fear</h2>
+    
+    <div class="center"> <h4 class="headings">Ingredients</h4> </div>
     <ul>
         <li>1 1/2 pounds of groud beef</li>
         <li>1/4 cup water</li>
@@ -23,7 +25,7 @@
         <li>1 cup shredded Colby-Jack cheese</li>
     </ul>
 
-    <h4>Steps</h4>
+    <div class="center"> <h4 class="headings">Steps</h4> </div>
     <ol>
         <li>Preheat oven to 350 degrees F (175 degrees C). Grease a 9x13-inch casserole dish.</li>
         <li>Heat a large skillet over medium-high heat and stir in ground beef. Cook and stir until beef is crumbly, evenly browned, and no longer pink, about 10 minutes. Drain and discard any excess grease. Add water and taco seasoning; cook and stir until mixture has thickened, 5 to 10 minutes.</li>
@@ -32,5 +34,6 @@
         <li>Turn on oven's broiler.</li>
         <li>Place lasagna under the broiler until Colby-Jack cheese is melted and bubbling, 3 to 5 minutes.</li>
     </ol>
+    <a href="../index.html">Back to menu</a>
 </body>
 </html>
